--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="link_style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
 	<body>
